--- a/equipments/templates/equipments/equipment_detail.html
+++ b/equipments/templates/equipments/equipment_detail.html
@@ -198,10 +198,22 @@
     </div>
 </div>
 
-<!-- Кнопка назад -->
+<!-- Кнопка назад с запасным вариантом -->
 <div class="mt-3">
-    <a href="{% url 'equipments:equipment_list' %}" class="btn btn-outline-secondary">
-        <i class="bi bi-arrow-left me-1"></i>Назад к списку
-    </a>
+    <button onclick="goBack()" class="btn btn-outline-secondary">
+        <i class="bi bi-arrow-left me-1"></i>Назад
+    </button>
 </div>
+
+<script>
+function goBack() {
+    // Пытаемся вернуться по истории браузера
+    if (document.referrer && document.referrer.includes(window.location.hostname)) {
+        window.history.back();
+    } else {
+        // Если не получается, идем на список оборудования
+        window.location.href = "{% url 'equipments:equipment_list' %}";
+    }
+}
+</script>
 {% endblock %}
