--- a/network/templates/network/equipment_detail.html
+++ b/network/templates/network/equipment_detail.html
@@ -4,8 +4,9 @@
 {% block title %}{{ equipment.name }} - Equipment Tracker{% endblock %}
 
 {% block content %}
-{% include 'network/_navigation.html' %}
-<div class="container-fluid py-4">
+<div class="row">
+    <div class="col-md-3">{% include 'network/network_sidebar.html' %}</div>
+    <div class="col-md-9"><div class="container-fluid py-4">
     <!-- Заголовок -->
     <div class="d-flex justify-content-between align-items-center mb-4">
         <div>
